--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,15 @@ logs/
 # ---------------------
 
 # SASS Cache files
-html/.sass-cache/
+.sass-cache/
 
 # Generated CSS files
 html/assets/css/*.css
 
 # Generated JS Files
 html/assets/js/*.js
+
+html
 
 
 # ------------
