--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "base-static",
   "private": true,
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-cli": "~0.1.11",
     "assemble": "^0.4.37",
+    "grunt": "~0.4.4",
     "grunt-autoprefixer": "^0.7.2",
-    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-coffee": "~0.10.0",
     "grunt-contrib-compress": "^0.9.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.10.0",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-sass": "~0.5.1",
-    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jasmine": "~0.5.3",
-    "grunt-template-jasmine-istanbul": "~0.2.6",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-sass": "~0.5.1",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-modernizr": "^0.5.2",
+    "grunt-scp": "^0.1.7",
+    "grunt-shell": "^1.1.1",
+    "grunt-ssh": "^0.12.0",
+    "grunt-template-jasmine-istanbul": "~0.2.6",
     "load-grunt-tasks": "~0.2.1"
   }
 }
