--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "grunt-contrib-jasmine": "~0.5.3",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-sass": "~0.5.1",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-modernizr": "^0.5.2",
     "grunt-scp": "^0.1.7",
