--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "base-static",
+  "name": "stphnsn",
   "private": true,
+  "version": "0.0.1",
   "devDependencies": {
-    "assemble": "^0.4.42",
     "grunt": "~0.4.4",
+    "grunt-assemble": "^0.4.0",
     "grunt-autoprefixer": "^0.7.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.0",
     "grunt-contrib-compress": "^0.9.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-jasmine": "~0.5.3",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-sass": "~0.5.1",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-modernizr": "^0.5.2",
-    "grunt-scp": "^0.1.7",
-    "grunt-shell": "^1.1.1",
-    "grunt-ssh": "^0.12.0",
-    "grunt-template-jasmine-istanbul": "~0.2.6",
     "load-grunt-tasks": "~0.2.1"
   }
 }
